--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
       <li>Le rendu visuel apparait, ainsi que la ligne de CSS correspondant.</li>
       <li>Il est possible d'ajouter le gradient à votre collection, laquelle est stockée dans le navigateur.</li>
       <li>Pour supprimer la collection, il suffit d'appuyer sur le bouton 'Supprimer ma collection'</li>
+      <li>Projet disponible sur <a href="https://cedricbeau.github.io/css-gradient-generator/">GitHub</a></li>
     </ol>
     <button type="button" class="btn btn-consignes"><svg class="icon icon-arrow-down2"><use xlink:href="#icon-arrow-down2"></use></svg></button>
   </div>
   <!-- Consignes: End -->
-  <div class="content">
-    <a href="https://cedricbeau.github.io/css-gradient-generator/"><img style="position: absolute; top: 0; left: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_left_gray_6d6d6d.png" alt="Fork me on GitHub"></a>
+  <div class="content">    
     <link rel="stylesheet" href="css/form.css">
     <form action="#" id="theGradientForm">    
 
