--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <li>Le rendu visuel apparait, ainsi que la ligne de CSS correspondant.</li>
       <li>Il est possible d'ajouter le gradient à votre collection, laquelle est stockée dans le navigateur.</li>
       <li>Pour supprimer la collection, il suffit d'appuyer sur le bouton 'Supprimer ma collection'</li>
-      <li>Projet disponible sur <a href="https://cedricbeau.github.io/css-gradient-generator/">GitHub</a></li>
+      <li>Projet disponible sur <a href="https://github.com/cedricbeau/css-gradient-generator">GitHub</a></li>
     </ol>
     <button type="button" class="btn btn-consignes"><svg class="icon icon-arrow-down2"><use xlink:href="#icon-arrow-down2"></use></svg></button>
   </div>
