--- a/index.html
+++ b/index.html
@@ -29,9 +29,10 @@
       <symbol id="icon-checkmark" viewBox="0 0 32 32"><title>checkmark</title><path d="M27 4l-15 15-7-7-5 5 12 12 20-20z"></path></symbol>
       <symbol id="icon-box-add" viewBox="0 0 32 32"><title>box-add</title><path d="M26 2h-20l-6 6v21c0 0.552 0.448 1 1 1h30c0.552 0 1-0.448 1-1v-21l-6-6zM16 26l-10-8h6v-6h8v6h6l-10 8zM4.828 6l2-2h18.343l2 2h-22.343z"></path></symbol>
       <symbol id="icon-arrow-down2" viewBox="0 0 32 32"><title>arrow-down2</title><path d="M27.414 19.414l-10 10c-0.781 0.781-2.047 0.781-2.828 0l-10-10c-0.781-0.781-0.781-2.047 0-2.828s2.047-0.781 2.828 0l6.586 6.586v-19.172c0-1.105 0.895-2 2-2s2 0.895 2 2v19.172l6.586-6.586c0.39-0.39 0.902-0.586 1.414-0.586s1.024 0.195 1.414 0.586c0.781 0.781 0.781 2.047 0 2.828z"></path></symbol>
+      <symbol id="icon-github" viewBox="0 0 32 32"><title>github</title><path d="M16 0.395c-8.836 0-16 7.163-16 16 0 7.069 4.585 13.067 10.942 15.182 0.8 0.148 1.094-0.347 1.094-0.77 0-0.381-0.015-1.642-0.022-2.979-4.452 0.968-5.391-1.888-5.391-1.888-0.728-1.849-1.776-2.341-1.776-2.341-1.452-0.993 0.11-0.973 0.11-0.973 1.606 0.113 2.452 1.649 2.452 1.649 1.427 2.446 3.743 1.739 4.656 1.33 0.143-1.034 0.558-1.74 1.016-2.14-3.554-0.404-7.29-1.777-7.29-7.907 0-1.747 0.625-3.174 1.649-4.295-0.166-0.403-0.714-2.030 0.155-4.234 0 0 1.344-0.43 4.401 1.64 1.276-0.355 2.645-0.532 4.005-0.539 1.359 0.006 2.729 0.184 4.008 0.539 3.054-2.070 4.395-1.64 4.395-1.64 0.871 2.204 0.323 3.831 0.157 4.234 1.026 1.12 1.647 2.548 1.647 4.295 0 6.145-3.743 7.498-7.306 7.895 0.574 0.497 1.085 1.47 1.085 2.963 0 2.141-0.019 3.864-0.019 4.391 0 0.426 0.288 0.925 1.099 0.768 6.354-2.118 10.933-8.113 10.933-15.18 0-8.837-7.164-16-16-16z"></path></symbol>
     </defs>
   </svg>
-  <!-- SVG: End -->  
+  <!-- SVG: End -->
   <link rel="stylesheet" href="css/consignes.css">
   <div class="consignes">
     <h3>Consignes</h3>
@@ -43,7 +44,6 @@
       <li>Le rendu visuel apparait, ainsi que la ligne de CSS correspondant.</li>
       <li>Il est possible d'ajouter le gradient à votre collection, laquelle est stockée dans le navigateur.</li>
       <li>Pour supprimer la collection, il suffit d'appuyer sur le bouton 'Supprimer ma collection'</li>
-      <li>Projet disponible sur <a href="https://github.com/cedricbeau/css-gradient-generator">GitHub</a></li>
     </ol>
     <button type="button" class="btn btn-consignes"><svg class="icon icon-arrow-down2"><use xlink:href="#icon-arrow-down2"></use></svg></button>
   </div>
@@ -131,8 +131,14 @@
     <!-- Collection: End -->
 
     <link rel="stylesheet" href="css/footer.css">
-    <footer>
-      <a href="https://cedricbeau.pro/" title="cedricbeau.pro"><svg width="18" height="13"><use xlink:href="#shape-code"></use></svg> avec <svg width="14" height="13"><use xlink:href="#icon-heart"></use></svg> par Cédric Beau</a>
+    <footer class="container">
+      <div span="me">
+        <script type="text/javascript">document.write(new Date().getFullYear());</script>      
+        - <a href="https://cedricbeau.pro/" title="cedricbeau.pro"><svg width="18" height="13"><use xlink:href="#shape-code"></use></svg> avec <svg width="14" height="13"><use xlink:href="#icon-heart"></use></svg> par Cédric Beau</a>
+      </div>
+      <div class="github">      
+        <a href="https://github.com/cedricbeau/css-gradient-generator">Fork me on <svg width="18" height="18"><use xlink:href="#icon-github"></use></svg></a>
+      </div>
     </footer>
     <!-- Footer: End -->
 
