--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
     <footer class="container">
       <div span="me">
         <script type="text/javascript">document.write(new Date().getFullYear());</script>      
-        - <a href="https://cedricbeau.pro/" title="cedricbeau.pro"><svg width="18" height="13"><use xlink:href="#shape-code"></use></svg> avec <svg width="14" height="13"><use xlink:href="#icon-heart"></use></svg> par Cédric Beau</a>
+        - <svg width="18" height="13"><use xlink:href="#shape-code"></use></svg> avec <svg width="14" height="13"><use xlink:href="#icon-heart"></use></svg> par <a href="https://cedricbeau.pro/" title="cedricbeau.pro">Cédric Beau</a>
       </div>
       <div class="github">      
         <a href="https://github.com/cedricbeau/css-gradient-generator">Fork me on <svg width="18" height="18"><use xlink:href="#icon-github"></use></svg></a>
