--- a/offline.html
+++ b/offline.html
@@ -15,23 +15,17 @@
   <meta name="msapplication-TileColor" content="#ffffff">
   <meta name="theme-color" content="#ffffff">
 
-  <script src="js/react.production.min.js" crossorigin></script>
-  <script src="js/react-dom.production.min.js" crossorigin></script>
-
   <link rel="manifest" href="manifest.json"></link>
 
   <!-- Critical Styles -->
   <style>/*! normalize.css v8.0.0 | MIT License | github.com/necolas/normalize.css */button,hr,input{overflow:visible}progress,sub,sup{vertical-align:baseline}[type=checkbox],[type=radio],legend{box-sizing:border-box;padding:0}html{line-height:1.15;-webkit-text-size-adjust:100%}body{margin:0}h1{font-size:2em;margin:.67em 0}hr{box-sizing:content-box;height:0}code,kbd,pre,samp{font-family:monospace,monospace;font-size:1em}a{background-color:transparent}abbr[title]{border-bottom:none;text-decoration:underline;text-decoration:underline dotted}b,strong{font-weight:bolder}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative}sub{bottom:-.25em}sup{top:-.5em}img{border-style:none}button,input,optgroup,select,textarea{font-family:inherit;font-size:100%;line-height:1.15;margin:0}button,select{text-transform:none}[type=button],[type=reset],[type=submit],button{-webkit-appearance:button}[type=button]::-moz-focus-inner,[type=reset]::-moz-focus-inner,[type=submit]::-moz-focus-inner,button::-moz-focus-inner{border-style:none;padding:0}[type=button]:-moz-focusring,[type=reset]:-moz-focusring,[type=submit]:-moz-focusring,button:-moz-focusring{outline:ButtonText dotted 1px}fieldset{padding:.35em .75em .625em}legend{color:inherit;display:table;max-width:100%;white-space:normal}textarea{overflow:auto}[type=number]::-webkit-inner-spin-button,[type=number]::-webkit-outer-spin-button{height:auto}[type=search]{-webkit-appearance:textfield;outline-offset:-2px}[type=search]::-webkit-search-decoration{-webkit-appearance:none}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}details{display:block}summary{display:list-item}[hidden],template{display:none}</style>
 
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/styles.min.css">
 
 </head>
 <body>
-  <link rel="stylesheet" href="css/consignes.min.css">
-  <div id="instructions"></div>
-  <!-- Consignes: End -->
   <div class="content">
-    <link rel="stylesheet" href="css/form.min.css">
+    <link rel="stylesheet" href="css/choices.min.css">
     <form action="#" id="theGradientForm">
       <div class="form-fieldset container">
         <div class="form-grid grid">
@@ -78,7 +72,7 @@
       </div>
     </form>
     <!-- Form: End -->
-    <link rel="stylesheet" href="css/resultat.min.css">
+    <link rel="stylesheet" href="css/result.min.css">
     <div class="resultat">
       <div id="theGradientResult" class="color-result"></div>
       <div class="info-result">
@@ -93,7 +87,7 @@
       </div>
     </div>
     <!-- Resultat: End -->
-    <link rel="stylesheet" href="css/collection.min.css">
+    <link rel="stylesheet" href="css/collections.min.css">
     <div id="collection" class="container">
       <div class="collection-header">
         <h2>Ma collection</h2>
@@ -104,7 +98,7 @@
       <div id="myCollection" class="grid"></div>
     </div>
     <!-- Collection: End -->
-    <link rel="stylesheet" href="css/footer.min.css">
+    <link rel="stylesheet" href="css/foot.min.css">
     <footer class="container">
       <div class="me">
         <script type="text/javascript">document.write(new Date().getFullYear());</script>
@@ -118,11 +112,9 @@
     </footer>
     <!-- Footer: End -->
   </div>
-  <!-- Content: End -->
 
   <script src="js/consignes.js"></script>
   <script  src="js/app.js"></script>
-  <script src="reactapp.js"></script>
 
 </body>
 </html>
