--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <div class="info-result-inner container">
               <div class="text-result"></div>
               <div class="add-to-container">
-                <button type="button" id="addToCollection" class="btn btn-light" onclick="gradientTool._validate(event)">
+                <button type="button" id="addToCollection" class="btn btn-primary" onclick="gradientTool._validate(event)">
                   <span class="icon-plus"></span>Ajouter à ma collection
                 </button>
               </div>
